@@ -37,6 +37,8 @@ typedef scoped_handle<SSL_CTX, SSL_CTX_free> SSL_CTX;
 typedef scoped_handle<X509, X509_free> X509;
 typedef scoped_handle<X509_NAME, X509_NAME_free> X509_NAME;
 
+std::string X509_digest(::X509* x509, const ::EVP_MD* md);
+
 }
 }
 #endif /*SSL_H_*/
