@@ -51,6 +51,8 @@ public:
 	virtual bool isSecure() const throw() { return true; }
 	virtual bool isTrusted() const throw();
 	virtual std::string getCipherName() const throw();
+	virtual std::string getDigest() const throw();
+	
 private:
 	friend class CryptoManager;
 
