@@ -177,6 +177,7 @@ public:
 	virtual bool isSecure() const throw() { return false; }
 	virtual bool isTrusted() const throw() { return false; }
 	virtual std::string getCipherName() const throw() { return Util::emptyString; }
+	virtual std::string getDigest() const throw() { return Util::emptyString; }
 
 	/** When socks settings are updated, this has to be called... */
 	static void socksUpdated();
