@@ -64,6 +64,7 @@ protected:
 		onSized(std::tr1::bind(&ThisType::handleSized, this, _1));
 		onActivate(std::tr1::bind(&ThisType::handleActivate, this, _1));
 		onCommand(std::tr1::bind(&ThisType::close, this, true), IDC_CLOSE_WINDOW);
+		noEraseBackground();
 	}
 	
 	virtual ~MDIChildFrame() {
