@@ -4,9 +4,10 @@
 class SplashWindow : public SmartWin::WidgetFactory<SmartWin::WidgetWindow>  {
 public:
 	SplashWindow();
-	
+	~SplashWindow();
 	void operator()(const string& str);
 private:
+	SmartWin::WidgetWindow* tmp;
 	WidgetTextBoxPtr text;
 };
 
